--- a/src/layout/300.css
+++ b/src/layout/300.css
@@ -2,6 +2,15 @@
 
 @media only screen and (min-width: 300px) { 
 
+    h1 {
+        font: 400 1.5em Spectral, serif;
+        line-height: 140%;
+    }
+    
+    h2 {
+        font: 600 1em Spectral, serif;
+    }
+
     /* BACKGROUND PATTERN */
     .pattern {
         background: url(../../static/pattern04c.png);
@@ -20,16 +29,17 @@
         grid-template-rows: 1fr auto auto auto auto 8em;
         grid-gap: .5em;
         grid-auto-flow: dense;    
-        max-width: 800px;
+        max-width: 400px;
         background-color: var(--color-card);
         box-shadow:  0px 0px 30px var(--color-bg-coral-dark);
         border-radius: 10px;
         grid-template-areas:
-            ".      Logo        .           .           .           ."
-            ".      Hello       Hello       Hello       Hello       ."
-            ".      Interviews  Interviews  Interviews  Interviews  ."
-            ".      Tagbox      Tagbox      Tagbox      Tagbox      ."
-            ".      Directory   Directory   Directory   Directory   ."
+            ". TitleLeft    .           Logo        Logo        .           TitleRight      ."
+            ". Hello        Hello       Hello       Hello       Hello       Hello           ."
+            ". Interviews   Interviews  Interviews  Interviews  Interviews  Interviews      ."
+            ". Contact      Contact     Contact     Contact     Contact     Contact         ."
+            ". Tagbox       Tagbox      Tagbox      Tagbox      Tagbox      Tagbox          ."
+            ". .            Directory   Directory   Directory   Directory   .               ."
             /* ". . Footer . . " */
             ;
     }  
@@ -46,8 +56,9 @@
     }
 
     .titleLeft, .titleRight {
+        height: 1em;
         color: var(--color-bg-coral-dark);
-        font: 400 .8em JetBrains-Mono, sans-serif;
+        font: var(--text-mono-std);
     }
 
     .titleLeft {
@@ -55,6 +66,7 @@
         grid-area: TitleLeft;
         align-self: center;
         justify-self: end;
+        text-align: right;
         margin: 1.8em -6.9em 0 0;
     }
 
@@ -70,20 +82,18 @@
     
     /* INTRODUCTION */
     .introHello {
+        grid-area: Hello;
         padding: .5em 0 0 0;
         margin: 0 0 0 0;
         grid-area: Hello;
-        text-align: center;
-        line-height: 140%;
+        text-align: left;
     }
 
     .introContact {
-        padding: 1em 0 0 0;
+        /* padding: 1em 0 0 0; */
         grid-area: Contact;
-        /* grid-column-start: 8;
-        grid-column-end: 11; */
-        align-self: end;
-        text-align: right;
+        /* align-self: end; */
+        /* text-align: right; */
         font: 400 .8em JetBrains-Mono, sans-serif;
     }
 
@@ -140,7 +150,6 @@
         font-style: italic;
         background-color: var(--color-listing-blockBG);
         color: var(--color-listing-purple);
-        /* margin: 1em 0 .5em 0; */
     }
 
 
