--- a/src/layout/300.css
+++ b/src/layout/300.css
@@ -175,11 +175,17 @@
         margin: 6em 0 2em 0;
         font: 400 .8em JetBrains-Mono, sans-serif;
         font-style: italic;
-        background-color: green;
+        /* background-color: green; */
     }
 
-    .tag-container {
-        
+    .tag-container {        
+    }
+
+    .tag-container--size {
+        line-height: 1.6em;
+        color: var(--color-listing-purple);
+        display: inline-block;
+        margin: 0 .8em 0 0;
     }
 
     /* 
