--- a/src/layout/300.css
+++ b/src/layout/300.css
@@ -194,6 +194,7 @@
      /* by filter style */
      .directory-block--filter {
         display: grid;
+        min-height: 25vmin;
         grid-column: span 4;
         font: 400 1.2em JetBrains-Mono, sans-serif;
         grid-auto-flow: row;
