tweaked display styles on the contact menu

--- a/src/layout/1000.css
+++ b/src/layout/1000.css
@@ -77,6 +77,14 @@
     }
     /* ----------------------------------------------- */
 
+    /* SUBSCRIBE */
+    .email-form {
+    }
+
+    
+
+    /* ----------------------------------------------- */
+
     /* INTERVIEW PROMOS */
     .podcast {
         display: grid;
